mgr: drop GIL in get_config

Fixes: https://tracker.ceph.com/issues/35985

Signed-off-by: John Spray <john.spray@redhat.com>
(cherry picked from commit d590a5391876eda23ef286af5800e5bdbb2b4b97)

Conflicts:
        src/mgr/ActivePyModules.cc